[tool.poetry]
name = "fonomafastapi"
version = "0.1.0"
description = "Test project for FONOMA Backend Depevelop"
authors = ["Nerio <nerio.hdiaz@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
