[tool.poetry]
name = "fonomafastapi"
version = "0.1.0"
description = "Test project for FONOMA Backend Depevelop"
authors = ["Nerio <nerio.hdiaz@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aioredis = "^2.0.1"
redis = "^4.5.4"
#fastapi-cache2 = "^0.2.1"
fastapi-redis-cache = "^0.2.5"
httpx = "^0.24.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
